# azure-vscode-github-asana-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run_server.py  test_api.py
azure/: function_app.py  host.json  local.settings.json  requirements.txt  test_function.py
azure/src/assistant/: azure_keyvault.py
azure/src/assistant/ai/: assistant_core.py
azure/src/assistant/api/: __init__.py  main.py
azure/src/assistant/integrations/: asana_client.py  github_client.py  vscode_integration.py
deploy/: deploy.sh  deploy_cli.sh  deploy_simple.sh
deploy/bicep/: main.bicep  main_fixed.bicep
scripts/: check_gitignore.sh  get_azure_config.sh  get_azure_config_manual.md  get_azure_config_simple.sh  setup_keyvault.py
src/assistant/: __init__.py  config.py
src/assistant/ai/: __init__.py  assistant_core.py
src/assistant/integrations/: asana_client.py
